# minesweeper

./: LICENSE  README.md  minesweeper.cabal
src/: Board.hs  Main.hs  Sweeper.hs
