name:                minesweeper
version:             0.1.0.0
synopsis:            An attempt at a probabilistic minesweeper solver
description:         Please see README.md
homepage:            http://github.com/TRManderson/minesweeper#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Manderson
maintainer:          me@trm.io
copyright:           2016 Tom Manderson
category:            Game, AI
build-type:          Simple
cabal-version:       >=1.10

executable minesweeper
  hs-source-dirs:      src
  other-modules:       Main, Board, Sweeper
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random >= 1.0
